Refactor: UserRepository를 JpaRepository 기반으로 변경 및 파일/컬렉션 저장소 분리