@@ -17,7 +17,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service("basicUserService")
@@ -36,16 +35,16 @@ public class BasicUserService implements UserService {
             throw new IllegalArgumentException("이미 존재하는 username 또는 email입니다.");
         }
 
+        UUID profileImageId = Optional.ofNullable(userDTO.getProfileImageId())
+                .map(UUID::fromString)
+                .orElse(null);
+
         String encodedPassword = passwordEncoder.encode(userDTO.getPassword());
-        UUID profileImageId = null;
-        if (userDTO.getProfileImageId() != null && !userDTO.getProfileImageId().isEmpty()) {
-            profileImageId = UUID.fromString(userDTO.getProfileImageId());
-        }
 
         User user = new User(UUID.randomUUID(), userDTO.getUsername(), userDTO.getEmail(), profileImageId, encodedPassword);
         userRepository.save(user);
 
-        System.out.println("✅ 사용자 생성 완료: " + user.getId());
+        log.info("✅ 사용자 생성 완료: {}", user.getId());
 
         return new UserReadResponse(
                 user.getId(),
@@ -57,28 +56,21 @@ public class BasicUserService implements UserService {
         );
     }
 
+    @Transactional(readOnly = true)
     @Override
     public Optional<UserReadResponse> read(UUID id) {
-        Optional<User> userOptional = userRepository.findById(id);
-
-        if (userOptional.isEmpty()) {
-            System.out.println("❌ 사용자 조회 실패 (존재하지 않음): " + id);
-        } else {
-            System.out.println("✅ 사용자 조회 성공: " + userOptional.get().getId());
-        }
-
-        return userOptional.map(user ->
-                new UserReadResponse(
+        return userRepository.findById(id)
+                .map(user -> new UserReadResponse(
                         user.getId(),
                         user.getUsername(),
                         user.getEmail(),
                         user.getProfileImageId(),
                         user.getLastActive(),
                         false
-                )
-        );
+                ));
     }
 
+    @Transactional(readOnly = true)
     @Override
     public List<UserReadResponse> readAll() {
         return userRepository.findAll().stream()
@@ -90,37 +82,33 @@ public class BasicUserService implements UserService {
                         user.getLastActive(),
                         false
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     @Override
     public void update(UUID id, UserUpdateRequest userDTO) {
-        userRepository.findById(id).ifPresentOrElse(user -> {
-            System.out.println("✅ 사용자 업데이트 시작: " + id);
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다: " + id));
 
-            // 수정: 새로운 필드명을 사용하여 업데이트
-            user.setUsername(userDTO.getNewUsername());
-            user.setEmail(userDTO.getNewEmail());
-            if (userDTO.getNewPassword() != null && !userDTO.getNewPassword().isEmpty()) {
-                user.setPassword(passwordEncoder.encode(userDTO.getNewPassword()));
-            }
+        user.setUsername(userDTO.getNewUsername());
+        user.setEmail(userDTO.getNewEmail());
+        if (userDTO.getNewPassword() != null && !userDTO.getNewPassword().isEmpty()) {
+            user.setPassword(passwordEncoder.encode(userDTO.getNewPassword()));
+        }
 
-            userRepository.save(user);
-            System.out.println("✅ 사용자 업데이트 완료: " + user.getId());
-
-        }, () -> {
-            System.out.println("❌ 사용자 업데이트 실패 (사용자 없음): " + id);
-            throw new IllegalArgumentException("사용자를 찾을 수 없습니다: " + id);
-        });
+        userRepository.save(user);
+        log.info("✅ 사용자 업데이트 완료: {}", id);
     }
 
     @Transactional
     @Override
     public void delete(UUID id) {
-        System.out.println("🗑 사용자 삭제 요청: " + id);
+        if (!userRepository.existsById(id)) {
+            throw new IllegalArgumentException("사용자를 찾을 수 없습니다: " + id);
+        }
         userRepository.deleteById(id);
-        System.out.println("✅ 사용자 삭제 완료: " + id);
+        log.info("✅ 사용자 삭제 완료: {}", id);
     }
 
     @Transactional
@@ -130,7 +118,6 @@ public class BasicUserService implements UserService {
             user.setLastActive(Instant.now());
             user.setOnline(true);
             userRepository.save(user);
-            System.out.println("✅ 마지막 활동 시간 업데이트 완료: " + userId);
             return true;
         }).orElse(false);
     }
@@ -138,13 +125,11 @@ public class BasicUserService implements UserService {
     @Transactional
     @Override
     public void updateProfileImage(UUID userId, UUID imageId) {
-        userRepository.findById(userId).ifPresentOrElse(user -> {
-            user.setProfileImageId(imageId);
-            userRepository.save(user);
-            System.out.println("✅ 프로필 이미지 업데이트 완료: " + imageId);
-        }, () -> {
-            System.out.println("❌ 사용자 ID를 찾을 수 없음: " + userId);
-            throw new IllegalArgumentException("사용자를 찾을 수 없습니다.");
-        });
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new IllegalArgumentException("사용자를 찾을 수 없습니다: " + userId));
+
+        user.setProfileImageId(imageId);
+        userRepository.save(user);
+        log.info("✅ 프로필 이미지 업데이트 완료: {}", imageId);
     }
 }
